Adjust text on main page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ featured_image: /images/social.jpg
 				{% include component-socials.html %}
 			</div>
 			<div class="other-stuff">
-				<p class="subtitle" style="text-align: center;">We run monthly meet-ups* in Meanjin (Brisbane), sometimes host events and run a Discord. Share your work, get feedback on your projects and chat about what you are making!</p>
+				<p class="subtitle" style="text-align: center;">The Squiggly River Games Collective is an arts collective and community. We run monthly meet-ups* in Meanjin (Brisbane), sometimes host events and run a Discord. Share your work, get feedback on your projects and chat about what you are making!</p>
 			</div>
 			<div class="other-stuff">
 				<p class="subtitle" style="text-align: right; color: #ff279a;">*Meet-ups are currently running online!</p>
