--- a/meetups/index.html
+++ b/meetups/index.html
@@ -10,13 +10,13 @@ featured_image:
 		<div class="wrap">
 			<div class="title">
 				<h1 class="wavy-underline">meetup FAQs</h1>
-				<h4>Where can I find info on the next meet-up?</h4>
-				<p>We post the meet-up details to our <a href="https://twitter.com/squigglyriver">Twitter</a> and our <a href="https://discord.gg/MrPzZXH">Discord</a>. Find us there!</p></br>
-				<h4>Where are the meet-ups held?</h4>
-				<p> Meet-ups are currently being held at <a href="https://www.slq.qld.gov.au/plan-my-visit/spaces-visit/edge" target="_blank">The Edge</a> which is attached the State Library. The Edge is close to the Cultural Center bus stop and South Brisbane train station.</p></br>
+				<h4>Where can I find info on the next meetup?</h4>
+				<p>We post the meetup details to our <a href="https://twitter.com/squigglyriver">Twitter</a> and our <a href="https://discord.gg/MrPzZXH">Discord</a>. Find us there!</p></br>
+				<h4>Where are the meetups held?</h4>
+				<p> Meetups are currently being held at <a href="https://www.slq.qld.gov.au/plan-my-visit/spaces-visit/edge" target="_blank">The Edge</a> which is attached the State Library. The Edge is close to the Cultural Center bus stop and South Brisbane train station.</p></br>
 				<h4>Do I need to RSVP?</h4>
-				<p>Nope! This is a very casual meet-up. Most people just come to the ones that they are able to.</p></br>
-				<h4>Do I have to stay for the whole 3 hour long meet-up?</h4>
+				<p>Nope! This is a very casual meetup. Most people just come to the ones that they are able to.</p></br>
+				<h4>Do I have to stay for the whole 3 hour long meetup?</h4>
 				<p>Not at all. We book the area for the full time but most people end up coming and going as they please. It’s very chill.</p></br>
 				<h4>What do I bring?</h4>
 				<p>You can bring anything you have been working on, at any stage of completion or polish. Feel free to bring a laptop to show off work or get help from others. If you have a lot of gear, we suggest bringing a powerboard.</p></br>
