--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@ featured_image: /images/social.jpg
 
 		<div class="wrap">
 			<div class="title other-stuff">
-				<!-- <p class="subtitle--tagline">
+				<p class="subtitle--tagline--mobile">
 				a place for games, playful arts things, and the people who make and play them.
-				</p> -->
+				</p>
 				<div class="wavy">
 				<p class="subtitle--tagline">	
 					<span style="--i:1;">a</span><span style="--i:2;">&nbsp;</span><span style="--i:3;">p</span><span style="--i:4;">l</span><span style="--i:5;">a</span><span style="--i:6;">c</span><span style="--i:7;">e</span><span style="--i:8;">&nbsp;</span><span style="--i:9;">f</span><span style="--i:10;">o</span><span style="--i:11;">r</span><span style="--i:12;">&nbsp;</span><span style="--i:13;">g</span><span style="--i:14;">a</span><span style="--i:15;">m</span><span style="--i:16;">e</span><span style="--i:17;">s</span><span style="--i:18;">,</span>
@@ -35,11 +35,12 @@ featured_image: /images/social.jpg
 				{% include component-socials.html %}
 			</div>
 			<div class="other-stuff">
-				<p class="subtitle" style="text-align: center;">The Squiggly River Games Collective is an arts collective and community. We run monthly meetups in Meanjin (Brisbane), sometimes host events and run a Discord. Share your work, get feedback on your projects and chat about what you are making!</p>
+				<p class="subtitle" style="text-align: center; margin-bottom: 2em;">The Squiggly River Games Collective is an arts collective and community. We run monthly meetups in Meanjin (Brisbane), sometimes host events and run a Discord. Share your work, get feedback on your projects and chat about what you are making!</p>
 			</div>
-			<!-- <div class="other-stuff">
-				<p class="subtitle" style="text-align: right; color: #ff279a;">*Meetups are currently running online!</p>
-			</div> -->
+			<div class="other-stuff">
+				<p style="text-align: center; font-weight: bold; color: #ff279a;">
+				The Squiggly River Games Collective is an arts collective and community founded in 2017 and run by <a href="https://twitter.com/erikaverkaaik">Erika Verkaaik</a> and <a href="https://twitter.com/BRKeogh">Brendan Keogh</a>. We acknowledge the Turrbal and Yuggera people, as the First Nations owners of the lands where Squiggly River Game Collective meets. We pay respect to their Elders, lores, customs and creation spirits. Sovereignty was never ceded.</p>
+			</div>
 		</div>
 
 </div>
