--- a/people/index.html
+++ b/people/index.html
@@ -5,7 +5,7 @@ description:
 featured_image:
 ---
 
-<div class="page-blog">
+<div class="page-blog" style="padding-bottom: 10em;">
 	<header class="listing other-stuff">
 		<div class="wrap">
 			<div class="title">
