Updated meetup page info for new library location

--- a/meetups/index.html
+++ b/meetups/index.html
@@ -13,26 +13,21 @@ featured_image:
 				<h4>Where can I find info on the next meetup?</h4>
 				<p>We post the meetup details to our <a href="https://twitter.com/squigglyriver">Twitter</a> and our <a href="https://discord.gg/MrPzZXH">Discord</a>. Find us there!</p></br>
 				<h4>Where are the meetups held?</h4>
-				<p> Meetups are currently being held at <a href="https://www.slq.qld.gov.au/plan-my-visit/spaces-visit/edge" target="_blank">The Edge</a> which is attached the State Library. The Edge is close to the Cultural Center bus stop and South Brisbane train station.</p></br>
+				<p> Meetups are currently being held at <a href="https://www.brisbane.qld.gov.au/things-to-see-and-do/council-venues-and-precincts/libraries/library-locations/brisbane-square-library" target="_blank">The Brisbane Square Library</a>, usually in the Tiered Theatrette. The Brisbane Square Library is within the CDB and close to both bus and train stations.</p></br>
 				<h4>Do I need to RSVP?</h4>
 				<p>Nope! This is a very casual meetup. Most people just come to the ones that they are able to.</p></br>
-				<h4>Do I have to stay for the whole 3 hour long meetup?</h4>
+				<h4>Do I have to stay for the whole 4 hour long meetup?</h4>
 				<p>Not at all. We book the area for the full time but most people end up coming and going as they please. It’s very chill.</p></br>
 				<h4>What do I bring?</h4>
 				<p>You can bring anything you have been working on, at any stage of completion or polish. Feel free to bring a laptop to show off work or get help from others. If you have a lot of gear, we suggest bringing a powerboard.</p></br>
 				<h4>What if I don’t have anything to show?</h4>
 				<p>Squiggly River is open to anyone, regardless of experience. You are absolutely welcome to just bring yourself, see what others have been working on and have a chat. </p></br>
 				<h4>How can I find the group?</h4>
-				<p>We will try to post the Window Bay number prior to the date. Otherwise we are usually the largest group of people at The Edge on Saturdays and we now have a nifty sign to look out for.</p></br>
-				<h4>Is The Edge accessible?</h4>
-				<p><a href="https://www.slq.qld.gov.au/plan-my-visit/hours-transport-access/access-people-disability" target="_blank">Full accessibility details here.</a>
-					<ul><li>The Edge is accessible via elevator.</li>
-					    <li>Wheelchairs available from the SQL upon request.</li>
-					    <li>Toilet facilities on every level.</li>
-					    <li>Water bubblers of different heights.</li>
-					    <li>Window bays have benches, tables, chairs and space for wheelchairs.</li></p></br>
+				<p>We will always include which room we are in within the event details.</p></br>
+				<h4>Is The Brisbane Square Library accessible?</h4>
+				<p><a href="https://www.brisbane.qld.gov.au/community-and-safety/community-support/disability-access-and-inclusion/council-venues/accessibility-features-at-council-libraries" target="_blank">Full accessibility details on coucil libraries here.</a><p>The Brisbane Square Library is fully wheelchair accessible.</p>
 				<h4>Food and drinks?</h4>
-				<p>The Edge has a small cafe inside it that has small snacks like brownies, muffins and biscuits (with Gluten-Free options).</p></br>
+				<p>The Brisbane Square Library has a kitchenette that can be used and it is within walking distance of a variety of cafes.</p></br>
 		</div>
 	</header>	
 </div>
