fixed spelling on meetups page

--- a/meetups/index.html
+++ b/meetups/index.html
@@ -24,8 +24,8 @@ featured_image:
 				<p>Squiggly River is open to anyone, regardless of experience. You are absolutely welcome to just bring yourself, see what others have been working on and have a chat. </p></br>
 				<h4>How can I find the group?</h4>
 				<p>We will always include which room we are in within the event details.</p></br>
-				<h4>Is The Brisbane Square Library accessible?</h4>
-				<p><a href="https://www.brisbane.qld.gov.au/community-and-safety/community-support/disability-access-and-inclusion/council-venues/accessibility-features-at-council-libraries" target="_blank">Full accessibility details on coucil libraries here.</a><p>The Brisbane Square Library is fully wheelchair accessible.</p>
+				<h4>Is the Brisbane Square Library accessible?</h4>
+				<p>The Brisbane Square Library is fully wheelchair accessible. <a href="https://www.brisbane.qld.gov.au/community-and-safety/community-support/disability-access-and-inclusion/council-venues/accessibility-features-at-council-libraries" target="_blank">Full accessibility details on coucil libraries here.</a></p>
 				<h4>Food and drinks?</h4>
 				<p>The Brisbane Square Library has a kitchenette that can be used and it is within walking distance of a variety of cafes.</p></br>
 		</div>
