Added Rose to list of organisers in footer

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ featured_image: /images/social.jpg
 			</div>
 			<div class="other-stuff">
 				<p style="text-align: center; font-weight: bold; color: #ff279a;">
-				The Squiggly River Games Collective is an arts collective and community founded in 2017 and run by <a href="https://twitter.com/erikaverkaaik">Erika Verkaaik</a> and <a href="https://twitter.com/BRKeogh">Brendan Keogh</a>. We acknowledge the Turrbal and Yuggera people, as the First Nations owners of the lands where Squiggly River Game Collective meets. We pay respect to their Elders, lores, customs and creation spirits. Sovereignty was never ceded.</p>
+				The Squiggly River Games Collective is an arts collective and community founded in 2017 and run by <a href="https://twitter.com/BRKeogh">Brendan Keogh</a>, <a href="https://twitter.com/erikaverkaaik">Erika Verkaaik</a> and <a href="https://rosaryy.itch.io/">Rose Wolfe. We acknowledge the Turrbal and Yuggera people, as the First Nations owners of the lands where Squiggly River Game Collective meets. We pay respect to their Elders, lores, customs and creation spirits. Sovereignty was never ceded.</p>
 			</div>
 		</div>
 
