--- a/meetups/index.html
+++ b/meetups/index.html
@@ -16,7 +16,7 @@ featured_image:
 				<p> Meetups are currently being held at <a href="https://www.brisbane.qld.gov.au/things-to-see-and-do/council-venues-and-precincts/libraries/library-locations/brisbane-square-library" target="_blank">The Brisbane Square Library</a>, usually in the Tiered Theatrette. The Brisbane Square Library is within the CDB and close to both bus and train stations.</p></br>
 				<h4>Do I need to RSVP?</h4>
 				<p>Nope! This is a very casual meetup. Most people just come to the ones that they are able to.</p></br>
-				<h4>Do I have to stay for the whole 3 hour long meetup?</h4>
+				<h4>Do I have to stay for the whole meetup?</h4>
 				<p>Not at all. We book the area for the full time but most people end up coming and going as they please. It’s very chill.</p></br>
 				<h4>What do I bring?</h4>
 				<p>You can bring anything you have been working on, at any stage of completion or polish. Feel free to bring a laptop to show off work or get help from others. If you have a lot of gear, we suggest bringing a powerboard.</p></br>
@@ -25,7 +25,7 @@ featured_image:
 				<h4>How can I find the group?</h4>
 				<p>We will always include which room we are in within the event details.</p></br>
 				<h4>Is the Brisbane Square Library accessible?</h4>
-				<p>The Brisbane Square Library is fully wheelchair accessible. <a href="https://www.brisbane.qld.gov.au/community-and-safety/community-support/disability-access-and-inclusion/council-venues/accessibility-features-at-council-libraries" target="_blank">Full accessibility details on coucil libraries here.</a></p>
+				<p>The Brisbane Square Library is fully wheelchair accessible. <a href="https://www.brisbane.qld.gov.au/community-and-safety/community-support/disability-access-and-inclusion/council-venues/accessibility-features-at-council-libraries" target="_blank">Full accessibility details on coucil libraries here.</a></p></br>
 				<h4>Food and drinks?</h4>
 				<p>The Brisbane Square Library has a kitchenette that can be used and it is within walking distance of a variety of cafes.</p></br>
 		</div>
