Added artgame club page and details

--- a/meetups/index.html
+++ b/meetups/index.html
@@ -10,6 +10,7 @@ featured_image:
 		<div class="wrap">
 			<div class="title">
 				<h1 class="wavy-underline">meetup FAQs</h1>
+			</div>
 				<h4>Where can I find info on the next meetup?</h4>
 				<p>We post the meetup details to our <a href="https://twitter.com/squigglyriver">Twitter</a> and our <a href="https://discord.gg/MrPzZXH">Discord</a>. Find us there!</p></br>
 				<h4>Where are the meetups held?</h4>
@@ -21,7 +22,7 @@ featured_image:
 				<h4>What do I bring?</h4>
 				<p>You can bring anything you have been working on, at any stage of completion or polish. Feel free to bring a laptop to show off work or get help from others. If you have a lot of gear, we suggest bringing a powerboard.</p></br>
 				<h4>What if I don’t have anything to show?</h4>
-				<p>Squiggly River is open to anyone, regardless of experience. You are absolutely welcome to just bring yourself, see what others have been working on and have a chat. </p></br>
+				<p>Squiggly River is open to anyone, regardless of experience. You are absolutely welcome to just bring yourself, see what others have been working on and have a chat.</p></br>
 				<h4>How can I find the group?</h4>
 				<p>We will always include which room we are in within the event details.</p></br>
 				<h4>Is the Brisbane Square Library accessible?</h4>
