Minor change to meetups page

--- a/meetups/index.html
+++ b/meetups/index.html
@@ -14,7 +14,7 @@ featured_image:
 				<h4>Where can I find info on the next meetup?</h4>
 				<p>We post the meetup details to our <a href="https://twitter.com/squigglyriver">Twitter</a> and our <a href="https://discord.gg/MrPzZXH">Discord</a>. Find us there!</p></br>
 				<h4>Where are the meetups held?</h4>
-				<p> Meetups are currently being held at <a href="https://www.brisbane.qld.gov.au/things-to-see-and-do/council-venues-and-precincts/libraries/library-locations/brisbane-square-library" target="_blank">The Brisbane Square Library</a>, usually in the Tiered Theatrette. The Brisbane Square Library is within the CDB and close to both bus and train stations.</p></br>
+				<p> Meetups are currently being held at <a href="https://www.brisbane.qld.gov.au/things-to-see-and-do/council-venues-and-precincts/libraries/library-locations/brisbane-square-library" target="_blank">The Brisbane Square Library</a>. Please see the event details for which room the meetup will be held in. The Brisbane Square Library is within the CDB and close to both bus and train stations.</p></br>
 				<h4>Do I need to RSVP?</h4>
 				<p>Nope! This is a very casual meetup. Most people just come to the ones that they are able to.</p></br>
 				<h4>Do I have to stay for the whole meetup?</h4>
